yoshi-react/src/components/posts/post.css
/*
Copyright 2023 Kezziah Camille Ayuno, Alinn Martinez, Tommy Sandanasamy, Allan Ma, Omar Niazie

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.


Furthermore it is derived from the Python documentation examples thus
some of the code is Copyright © 2001-2013 Python Software
Foundation; All Rights Reserved
*/

.post{
    background-color:  #24292F;
    margin: 1em 10em;
    padding: 1em;
    padding-left: 2em;
    padding-right: 2em;
    border-radius: 1.5em;
}
.post-buttons{
    margin: 0em .5em;
    margin-right: 2em;
    color: white;
    padding: .5em;
    background-color: #735DFA;
    border: #735DFA;
    border-radius: .5em;
    cursor: pointer;
    display: inline-block;
}
.post-buttons:hover{
    background-color: #a7e7f8;
    border: #a7e7f8;
}

.image{
    width: 100%;
    border-radius: .5em;
}
.post-seemore{
    position: relative;
    color: white;
    padding: .1em;
    background-color: #735DFA;
    border: #735DFA;
    border-radius: .5em;
    cursor: pointer;
    text-decoration: none;
    text-align: center;
    right: 1em;
}
.post-none{
    text-align: center;
}
.post-host{
    color: #A7E7F8;
    border: .1em dashed #d2f326;
    border-radius: 1em;
    padding: .2em;
    text-align: center;
}
.post-num-lc{
    display: inline-block;
}
/* .post-published{
    position: absolute;
    margin-top: 2em;
    margin-left: 45em;
} */

